src/validation/tests/snapshots/rusty__validation__tests__bitaccess_validation_test__dwordaccess_range_test.snap
---
source: src/validation/tests/bitaccess_validation_test.rs
expression: "&diagnostics"
---
error[E057]: DWord-Wise access for type LWORD must be in range 0..1
  ┌─ <internal>:6:19
  │
6 │                 d.%D2;
  │                   ^^^ DWord-Wise access for type LWORD must be in range 0..1
